--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -47,3 +47,8 @@ gem 'commonmarker'
 gem 'sanitize'
 # TextileFilter
 gem 'RedCloth'
+
+## security dependencies
+gem 'rubyzip', '>= 2.2.0'
+
+gem 'nokogiri', '>= 1.10.7'
